# fast-agent

./: .gitignore  .gitmodules  .pre-commit-config.yaml  2026-06-03-cleanup-handover.md  2026-06-03-main-merge-mcp-registry-handover.md  25_11_29_00_46-conversation.json  ACP_IMPLEMENTATION_ASSESSMENT.md  ACP_TOOL_IMPLEMENTATION_ASSESSMENT.md  AGENTS.md  LICENSE  NOTICE  PLAN-extended-thinking.md  README.md  RIPGREP_IMPROVEMENTS_SUMMARY.md  TASKS.md  agent.py  agent_demo.py  agetns_as_tools_plan_fix.md  agetns_as_tools_plan_scratch.md  bedrock.jsonl  decorator.json  docker-setup.json  docs-handover.md  fastagent.config.yaml  foo.md  foo.py  gepa-further-handover.md  handover.md  hatch_build.py  hf-space-deployer.skill  hf.md  listener.py  nebius.json  novita.json  pyproject.toml  refactor_boundaries.md  refactor_plan_provider.md  requirements.txt  resume_refactor.md  ripgrep_search[1]-2026-01-20-11-46-00.json  (+111 more)
docs/: .firebaserc  ACP_FILESYSTEM_SUPPORT.md  ACP_IMPLEMENTATION_OVERVIEW.md  ACP_TERMINAL_SUPPORT.md  ACP_TESTING.md  ACP_TOOL_CALLS.md  AGENT_CARD_IMPLEMENTATION_OVERVIEW.md  README.md  REPL_IMPLEMENTATION_OVERVIEW.md  (+13 more)
docs-internal/: ACP_IMPLEMENTATION_OVERVIEW.md  ACP_SLASH_COMMANDS_DESIGN.md  REPL_IMPLEMENTATION_OVERVIEW.md  SESSION_INTEGRATION.md  a3-styling.md  agent_hooks.md  anthropic-structured.md  skills-non-local-environments.md  smart-agent.md
examples/fastapi/: pyproject.toml
examples/setup/: .gitignore  agent.py  fast-agent.yaml  fastagent.config.yaml  fastagent.secrets.yaml.example  pyproject.toml
publish/fast-agent-acp/: pyproject.toml
(+2108 files in other folders)
