[project]
name = "fast-agent-app"
version = "0.1.0"
description = "a simple fast-agent application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fast-agent-mcp",
  "fastapi>=0.116.1",
]

[tool.uv]
package = true

# Optional convenience entry point if you later package this app:
[project.scripts]
fast-agent-app = "agent:main"
