[project]
name = "fast-agent-app"
version = "0.1.0"
description = "A FastAgent app scaffolded by fast-agent setup"
readme = "README.md"
requires-python = "{{python_requires}}"
dependencies = [
  {{fast_agent_dep}}
]

[tool.uv]
package = true

# Optional convenience entry point if you later package this app:
[project.scripts]
fast-agent-app = "agent:main"

